<resources>
    <string name="app_name">TestSubmissionSuitemedia</string>
    <string name="button">button</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="ic_photo">ic_Photo</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="truePalindrome">It is Palindrome</string>
    <string name="falsePalindrome">it is not Palindrome</string>
    <string name="result">Result</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome</string>
    <string name="not_empty">Name cannot be empty</string>
    <string name="fullname">Fullname</string>
    <string name="full_name_format">%1$s %2$s</string>
    <string name="error_network">Network error. Please check your connection.</string>
    <string name="error_http">HTTP error occurred. Please try again later.</string>
    <string name="error_generic">An unexpected error occurred. Please try again.</string>
    <string name="button_back">Back</string>
    <string name="choose_a_user">Choose a user</string>
    <string name="selected_username">Selected User Name</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
</resources>