<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_first_page"
    tools:context=".main.MainActivity">

    <EditText
        android:id="@+id/idName"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/background_input"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/hint_Colortext"
        android:textColorHint="@color/hint_Colortext"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <EditText
        android:id="@+id/idPalindrome"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/background_input"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/palindrome"
        android:inputType="text"
        android:textColor="@color/hint_Colortext"
        android:textColorHint="@color/hint_Colortext"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <ImageView
        android:id="@+id/id_icPhoto"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:contentDescription="@string/ic_photo"
        android:src="@drawable/ic_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btnCheckPalindrome"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:background="@drawable/button_primary"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/check"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNavigateNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <Button
        android:id="@+id/btnNavigateNext"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:background="@drawable/button_primary"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />
</androidx.constraintlayout.widget.ConstraintLayout>